Added new images and Refined LauchBay Grid
Added new images for other items on sheet
Refined LauchBay Grid including addinf subgrids for launchbay tug and trailer conditions

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -876,164 +876,6 @@ input[type="checkbox"].sheet-armourConditionSlot + span::before
 	content: "e";
 }
 
-/* ******************************* */
-/*      Condition Graphics         */
-/* ******************************* */
-
-/* Armour & Condition graphics*/
-.sheet-armor + input[type="checkbox"]
-{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/armor.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px;
-}
-
-.sheet-resilance + input[type="checkbox"]
-{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/resiliance.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px;
-}
-
-.sheet-integrity + input[type="checkbox"]
-{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/sys-int.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px;
-}
-
-.sheet-vital + input[type="checkbox"]
-{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/vital.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px;
-}
-
-/* Armor & Conditions toggles */
-.sheet-armor input[type="checkbox"],
-.sheet-resilance input[type="checkbox"],
-.sheet-integrity input[type="checkbox"],
-.sheet-vital input[type="checkbox"]
-{
-	z-index: 5;
-	opacity: 0;
-	height: 23px;
-	width: 23px !important;
-	min-width: 23px;
-	position: relative;
-	left: 13px;
-}
-
-.sheet-resilance input[type="checkbox"]
-{
-	left: 3px;
-}
-
-.sheet-integrity input[type="checkbox"]
-{
-	left: 2px;
-}
-
-.sheet-vital input[type="checkbox"]
-{
-	left: 0px;
-}
-
-/* Armour & Condition Damaged graphics*/
-.sheet-armor input[type="checkbox"] + span.sheet-armor-damage
-{
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/armor2.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px !important;
-	opacity: 0;
-	z-index: 3;
-	position: relative;
-	left: -12px;
-	flex-shrink: 0;
-}
-
-.sheet-resiliance input[type="checkbox"] + span.sheet-resiliance-damage
-{
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/resiliance2.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px !important;
-	opacity: 0;
-	z-index: 3;
-	position: relative;
-	left: -12px;
-	flex-shrink: 0;
-}
-
-.sheet-integrity input[type="checkbox"] + span.sheet-integrity-damage
-{
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/sys-int2.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px !important;
-	opacity: 0;
-	z-index: 3;
-	position: relative;
-	left: -12px;
-	flex-shrink: 0;
-}
-
-.sheet-vital input[type="checkbox"] + span.sheet-vital-damage
-{
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/vital2.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px !important;
-	opacity: 0;
-	z-index: 3;
-	position: relative;
-	left: -12px;
-	flex-shrink: 0;
-}
-
-/* Opacity Control */
-.sheet-armor input[type="checkbox"]:checked + span.sheet-armor-damage,
-.sheet-resilance input[type="checkbox"]:checked + span.sheet-resiliance-damage,
-.sheet-integrity input[type="checkbox"]:checked + span.sheet-integrity-damage,
-.sheet-vital input[type="checkbox"]:checked + span.sheet-vital-damage
-{
-	opacity: 1;
-}
-
-
 /* Fake checkbox checks as filled Armour condition slots*/
 input[type="checkbox"]:checked.sheet-armourConditionSlot + span::before
 {
@@ -1334,6 +1176,371 @@ button[type=roll].sheet-rollButton::before
 {
 }
 
+/* ******************************* */
+/*      Condition Graphics         */
+/* ******************************* */
+
+/* Hide Checkboxes and Radio boxes */
+input[type="checkbox"].sheet-hideCheckbox,
+input[type="radio"].sheet-hideCheckbox
+{
+	opacity: 0;
+	cursor: pointer;
+	z-index: 3;
+}
+
+/* Subgrid for Tug Conditions */
+.sheet-launch-bay-tug-conditions
+{
+	grid-column-start: 10;
+	grid-column-end: 11;
+	grid-row-start: 3;
+	grid-row-end: 11;
+	display: grid;
+	grid-template-columns: 25px;
+	grid-template-rows: repeat(4,25px);
+	grid-template-areas: "resiliance2" "resiliance1" "integrity" "vitality";
+	position: relative;
+	justify-self: end;
+	margin-top: 10px;
+}
+
+.sheet-launch-bay-tug-conditions > input
+{
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	position: absolute;
+}
+
+.sheet-launch-bay-tug-conditions > .sheet-resiliance-slot-2
+{
+	grid-area: resiliance2;
+}
+
+.sheet-launch-bay-tug-conditions > .sheet-resiliance-slot-1
+{
+	grid-area: resiliance1;
+}
+
+.sheet-launch-bay-tug-conditions > .sheet-integrity
+{
+	grid-area: integrity;
+}
+
+.sheet-launch-bay-tug-conditions > .sheet-vital
+{
+	grid-area: vitality;
+}
+
+/* Subgrid for Trailer Conditions */
+.sheet-launch-bay-trailer-conditions
+{
+	grid-column-start: 10;
+	grid-column-end: 11;
+	grid-row-start: 14;
+	grid-row-end: 20;
+	display: grid;
+	grid-template-columns: 25px;
+	grid-template-rows: repeat(3,25px);
+	grid-template-areas: "resiliance" "integrity" "vitality";
+	position: relative;
+	justify-self: end;
+	margin-top: 10px;
+}
+
+	.sheet-launch-bay-trailer-conditions > input
+	{
+		width: 100%;
+		height: 100%;
+		z-index: 1;
+		position: absolute;
+	}
+
+	.sheet-launch-bay-trailer-conditions > .sheet-resiliance-slot-2
+	{
+		grid-area: resiliance;
+	}
+
+	.sheet-launch-bay-trailer-conditions > .sheet-integrity
+	{
+		grid-area: integrity;
+	}
+
+	.sheet-launch-bay-trailer-conditions > .sheet-vital
+	{
+		grid-area: vitality;
+	}
+
+
+/* Inline Checkbox Location */
+input[type="checkbox"].sheet-inlineCheckbox,
+input[type="radio"].sheet-inlineCheckbox
+{
+	width: 15px;
+	height: 15px;
+	margin: 0;
+	padding: 0;
+	font-size: 15px;
+	vertical-align: bottom;
+}
+
+span.sheet-inlinePips
+{
+	background-size: 14px 14px;
+	height: 15px;
+	width: 15px;
+	vertical-align: bottom;
+}
+
+input[type="checkbox"].sheet-largeCheckbox,
+input[type="radio"].sheet-largeCheckbox
+{
+	width: 25px;
+	height: 25px;
+	margin: 0;
+	padding: 0;
+	font-size: 25px;
+	vertical-align: bottom;
+}
+
+span.sheet-largePips
+{
+	background-size: 24px 24px;
+	height: 25px;
+	width: 25px;
+	vertical-align: bottom;
+}
+
+input[type="checkbox"] + span.sheet-armour
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/armor.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="checkbox"]:checked + span.sheet-armour
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/armor2.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="checkbox"] + span.sheet-resiliance
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/resiliance.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="checkbox"]:checked + span.sheet-resiliance
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/resiliance2.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="checkbox"] + span.sheet-integrity
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/sys-int.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="checkbox"]:checked + span.sheet-integrity
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/sys-int2.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="checkbox"] + span.sheet-vital
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/vital.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="checkbox"]:checked + span.sheet-vital
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/vital2.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+
+/* Armour & Condition graphics*/
+/*.sheet-armor + input[type="checkbox"]
+{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/armor.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px;
+}
+
+.sheet-resilance + input[type="checkbox"]
+{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/resiliance.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px;
+}
+
+.sheet-integrity + input[type="checkbox"]
+{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/sys-int.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px;
+}
+
+.sheet-vital + input[type="checkbox"]
+{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/vital.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px;
+}
+
+/* Armor & Conditions toggles */
+/*.sheet-armor input[type="checkbox"],
+.sheet-resilance input[type="checkbox"],
+.sheet-integrity input[type="checkbox"],
+.sheet-vital input[type="checkbox"]
+{
+	z-index: 5;
+	opacity: 0;
+	height: 23px;
+	width: 23px !important;
+	min-width: 23px;
+	position: relative;
+	left: 13px;
+}
+
+.sheet-resilance input[type="checkbox"]
+{
+	left: 3px;
+}
+
+.sheet-integrity input[type="checkbox"]
+{
+	left: 2px;
+}
+
+.sheet-vital input[type="checkbox"]
+{
+	left: 0px;
+}*/
+
+/* Armour & Condition 1 graphics*/
+/*.sheet-armor input[type="checkbox"] + span.sheet-armor-damage
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/armor2.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px !important;
+	opacity: 0;
+	z-index: 3;
+	position: relative;
+	left: -12px;
+	flex-shrink: 0;
+}
+
+.sheet-resiliance input[type="checkbox"] + span.sheet-resiliance-damage
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/resiliance2.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px !important;
+	opacity: 0;
+	z-index: 3;
+	position: relative;
+	left: -12px;
+	flex-shrink: 0;
+}
+
+.sheet-integrity input[type="checkbox"] + span.sheet-integrity-damage
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/sys-int2.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px !important;
+	opacity: 0;
+	z-index: 3;
+	position: relative;
+	left: -12px;
+	flex-shrink: 0;
+}
+
+.sheet-vital input[type="checkbox"] + span.sheet-vital-damage
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/vital2.png);
+	background-size: 24px 24px;
+	background-repeat: no-repeat;
+	background-position: center;
+	height: 25px;
+	width: 25px !important;
+	opacity: 0;
+	z-index: 3;
+	position: relative;
+	left: -12px;
+	flex-shrink: 0;
+}*/
+
+/* Opacity Control */
+/*.sheet-armor input[type="checkbox"]:checked + span.sheet-armor-damage,
+.sheet-resilance input[type="checkbox"]:checked + span.sheet-resiliance-damage,
+.sheet-integrity input[type="checkbox"]:checked + span.sheet-integrity-damage,
+.sheet-vital input[type="checkbox"]:checked + span.sheet-vital-damage
+{
+	opacity: 1;
+}*/
+
+
+
+
 /* ***************************************** */
 /*               SHIP SYSTEMS                */
 /* ***************************************** */
@@ -1375,6 +1582,7 @@ button[type=roll].sheet-rollButton::before
 	width: 170px;
 	padding-top: 4px;
 	padding-left: 4px;
+	z-index:0;
 }
 
 .sheet-flex-systemRow
@@ -1635,6 +1843,7 @@ input[type="number"].sheet-currentCharge
 	width: 120px;
 	padding-top: 4px;
 	padding-left: 4px;
+	z-index: 0;
 }
 
 .sheet-flex-moduleRow
@@ -1987,6 +2196,7 @@ input[type="number"].sheet-currentCharge
 	padding-left: 6px;
 	padding-right: 12px;
 	padding-top: 4px;
+	z-index: 0;
 }
 
 /* Launch Bay text*/
@@ -2164,7 +2374,8 @@ input[type="number"].sheet-tugReactorCharge
 	grid-column-end: 11;
 	grid-row-start: 4;
 	grid-row-end: 6;
-	text-align: center;
+	align-self: center;
+	justify-self: center;
 }
 
 .sheet-launchBayTugConditionResilience2
@@ -2173,7 +2384,8 @@ input[type="number"].sheet-tugReactorCharge
 	grid-column-end: 11;
 	grid-row-start: 6;
 	grid-row-end: 8;
-	text-align: center;
+	align-self: center;
+	justify-self: center;
 }
 
 
@@ -2183,7 +2395,8 @@ input[type="number"].sheet-tugReactorCharge
 	grid-column-end: 11;
 	grid-row-start: 8;
 	grid-row-end: 10;
-	text-align: center;
+	align-self: center;
+	justify-self: center;
 }
 
 .sheet-launchBayTugConditionVital
@@ -2192,7 +2405,8 @@ input[type="number"].sheet-tugReactorCharge
 	grid-column-end: 11;
 	grid-row-start: 10;
 	grid-row-end: 12;
-	text-align: center;
+	align-self: center;
+	justify-self: center;
 }
 
 .sheet-launchBayTrailerTitle
@@ -2519,6 +2733,7 @@ input[type="number"].sheet-tugReactorCharge
 	flex-flow: nowrap;
 	font-size: 9px;
 	text-align: end;
+	padding-top: 5px;
 }
 
 .sheet-launchBayTrailerConditionResilience
