Fixed Invisible armour and tweaked Launchbay Grid
Fixed Armour pips to Inline-block; cell was squeezed to 0 when it was inline.
Tweaked the LaunchBay grids to amke it all fixed.
Removed pipd from Launch Bay for better fix and to match paper sheet

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -1177,7 +1177,7 @@ button[type=roll].sheet-rollButton::before
 }
 
 /* ******************************* */
-/*      Condition Graphics         */
+/*           Graphics              */
 /* ******************************* */
 
 /* Hide Checkboxes and Radio boxes */
@@ -1246,7 +1246,7 @@ input[type="radio"].sheet-hideCheckbox
 	grid-template-areas: "resiliance" "integrity" "vitality";
 	position: relative;
 	justify-self: end;
-	margin-top: 10px;
+	margin-top: 4px;
 }
 
 	.sheet-launch-bay-trailer-conditions > input
@@ -1273,26 +1273,58 @@ input[type="radio"].sheet-hideCheckbox
 	}
 
 
-/* Inline Checkbox Location */
+/* Inline Checkbox & Image Location */
 input[type="checkbox"].sheet-inlineCheckbox,
 input[type="radio"].sheet-inlineCheckbox
 {
-	width: 15px;
-	height: 15px;
+	width: 13px;
+	height: 13px;
 	margin: 0;
 	padding: 0;
-	font-size: 15px;
 	vertical-align: bottom;
 }
 
-span.sheet-inlinePips
+input[type="checkbox"].sheet-inlineCheckboxSmall,
+input[type="radio"].sheet-inlineCheckboxSmall
 {
-	background-size: 14px 14px;
-	height: 15px;
-	width: 15px;
+	width: 8px;
+	height: 13px;
+	margin: 0;
+	padding: 0;
 	vertical-align: bottom;
 }
 
+span.sheet-inlineArmour
+{
+	display: inline-block;
+	background-size: 12px 12px;
+	height: 13px;
+	width: 13px;
+	margin-left: -13px;
+	vertical-align: bottom;
+}
+
+span.sheet-inlineArmourSelectors
+{
+	display: inline-block;
+	background-size: 8px 8px;
+	height: 8px;
+	width: 8px;
+	margin-left: -8px;
+	vertical-align: top;
+}
+
+span.sheet-inlineStaticD10s
+{
+	display: inline-block;
+	background-size: 10px 10px;
+	height: 10px;
+	width: 10px;
+	margin-left: -10px;
+	vertical-align: bottom;
+}
+
+/* Grid Checkbox & Image location */
 input[type="checkbox"].sheet-largeCheckbox,
 input[type="radio"].sheet-largeCheckbox
 {
@@ -1311,6 +1343,26 @@ span.sheet-largePips
 	width: 25px;
 	vertical-align: bottom;
 }
+
+/* Graphics */
+input[type="checkbox"] + span.sheet-hexSelector
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/HexPip.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="checkbox"]:checked + span.sheet-hexSelector
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/HexPipFilled.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
 
 input[type="checkbox"] + span.sheet-armour
 {
@@ -1383,163 +1435,6 @@ input[type="checkbox"]:checked + span.sheet-vital
 	opacity: 1;
 	z-index: 2;
 }
-
-
-/* Armour & Condition graphics*/
-/*.sheet-armor + input[type="checkbox"]
-{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/armor.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px;
-}
-
-.sheet-resilance + input[type="checkbox"]
-{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/resiliance.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px;
-}
-
-.sheet-integrity + input[type="checkbox"]
-{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/sys-int.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px;
-}
-
-.sheet-vital + input[type="checkbox"]
-{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/vital.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px;
-}
-
-/* Armor & Conditions toggles */
-/*.sheet-armor input[type="checkbox"],
-.sheet-resilance input[type="checkbox"],
-.sheet-integrity input[type="checkbox"],
-.sheet-vital input[type="checkbox"]
-{
-	z-index: 5;
-	opacity: 0;
-	height: 23px;
-	width: 23px !important;
-	min-width: 23px;
-	position: relative;
-	left: 13px;
-}
-
-.sheet-resilance input[type="checkbox"]
-{
-	left: 3px;
-}
-
-.sheet-integrity input[type="checkbox"]
-{
-	left: 2px;
-}
-
-.sheet-vital input[type="checkbox"]
-{
-	left: 0px;
-}*/
-
-/* Armour & Condition 1 graphics*/
-/*.sheet-armor input[type="checkbox"] + span.sheet-armor-damage
-{
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/armor2.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px !important;
-	opacity: 0;
-	z-index: 3;
-	position: relative;
-	left: -12px;
-	flex-shrink: 0;
-}
-
-.sheet-resiliance input[type="checkbox"] + span.sheet-resiliance-damage
-{
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/resiliance2.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px !important;
-	opacity: 0;
-	z-index: 3;
-	position: relative;
-	left: -12px;
-	flex-shrink: 0;
-}
-
-.sheet-integrity input[type="checkbox"] + span.sheet-integrity-damage
-{
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/sys-int2.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px !important;
-	opacity: 0;
-	z-index: 3;
-	position: relative;
-	left: -12px;
-	flex-shrink: 0;
-}
-
-.sheet-vital input[type="checkbox"] + span.sheet-vital-damage
-{
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/vital2.png);
-	background-size: 24px 24px;
-	background-repeat: no-repeat;
-	background-position: center;
-	height: 25px;
-	width: 25px !important;
-	opacity: 0;
-	z-index: 3;
-	position: relative;
-	left: -12px;
-	flex-shrink: 0;
-}*/
-
-/* Opacity Control */
-/*.sheet-armor input[type="checkbox"]:checked + span.sheet-armor-damage,
-.sheet-resilance input[type="checkbox"]:checked + span.sheet-resiliance-damage,
-.sheet-integrity input[type="checkbox"]:checked + span.sheet-integrity-damage,
-.sheet-vital input[type="checkbox"]:checked + span.sheet-vital-damage
-{
-	opacity: 1;
-}*/
-
-
-
 
 /* ***************************************** */
 /*               SHIP SYSTEMS                */
@@ -2188,8 +2083,8 @@ input[type="number"].sheet-currentCharge
 	background-size: 370px 335px;
 	background-repeat: no-repeat;
 	display: grid;
-	grid-template-columns: 14px 45px repeat(3,1fr) 14px 40px 32px 20px 32px;
-	grid-template-rows: 15px repeat(2,12px) 15px repeat(2,12px) repeat(17,minmax(12px, 15px));
+	grid-template-columns: 14px 42px repeat(3,1fr) 14px 44px 30px 18px 32px;
+	grid-template-rows: 15px repeat(2,12px) 15px repeat(2,12px) repeat(5,minmax(12px, 15px)) 20px repeat(7,minmax(12px,15px)) 1fr 1fr;
 	grid-gap: 0px;
 	height: 335px;
 	width: 362px;
@@ -2300,12 +2195,13 @@ input[type="number"].sheet-currentCharge
 
 .sheet-launchBayArmourPips
 {
-	font-size: 10px;
+	font-size: 8px;
 	grid-column-start: 3;
-	grid-column-end: 6;
+	grid-column-end: 5;
 	grid-row-start: 9;
 	grid-row-end: 10;
 	flex-flow: nowrap;
+	justify-self: start;
 }
 
 .sheet-launchBayCapacityPips
@@ -2417,6 +2313,7 @@ input[type="number"].sheet-tugReactorCharge
 	grid-column-end: 5;
 	grid-row-start: 12;
 	grid-row-end: 13;
+	padding-top: 2px;
 }
 
 .sheet-launchBayTrailerCost1
@@ -2733,7 +2630,7 @@ input[type="number"].sheet-tugReactorCharge
 	flex-flow: nowrap;
 	font-size: 9px;
 	text-align: end;
-	padding-top: 5px;
+	padding-top: 0px;
 }
 
 .sheet-launchBayTrailerConditionResilience
