--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -1055,7 +1055,6 @@ input[type="checkbox"]:checked.sheet-Overcharge + span::before
 	content: "!";
 }
 
-
 /* Fake radio as Uparrows*/
 input[type="radio"].sheet-Boost + span::before
 {
@@ -1273,7 +1272,7 @@ input[type="radio"].sheet-hideCheckbox
 	}
 
 
-/* Inline Checkbox & Image Location */
+/* Inline Checkbox Location */
 input[type="checkbox"].sheet-inlineCheckbox,
 input[type="radio"].sheet-inlineCheckbox
 {
@@ -1294,6 +1293,16 @@ input[type="radio"].sheet-inlineCheckboxSmall
 	vertical-align: bottom;
 }
 
+input[type="radio"].sheet-inlineCapacityCheckbox
+{
+	width: 10px;
+	height: 15px;
+	margin: 0;
+	padding: 0;
+	vertical-align: middle;
+}
+
+/* Inline Image Location */
 span.sheet-inlineArmour
 {
 	display: inline-block;
@@ -1301,7 +1310,6 @@ span.sheet-inlineArmour
 	height: 13px;
 	width: 13px;
 	margin-left: -13px;
-	vertical-align: bottom;
 }
 
 span.sheet-inlineArmourSelectors
@@ -1311,20 +1319,29 @@ span.sheet-inlineArmourSelectors
 	height: 8px;
 	width: 8px;
 	margin-left: -8px;
-	vertical-align: top;
 }
 
-span.sheet-inlineStaticD10s
+span.sheet-inlineCapacityPips
+{
+	display: inline-block;
+	background-size: 10px 15px;
+	height: 15px;
+	width: 10px;
+	margin-left: -10px;
+	vertical-align: middle;
+}
+
+
+span.sheet-inlinePips
 {
 	display: inline-block;
 	background-size: 10px 10px;
 	height: 10px;
 	width: 10px;
 	margin-left: -10px;
-	vertical-align: bottom;
 }
 
-/* Grid Checkbox & Image location */
+/* Grid Checkbox location */
 input[type="checkbox"].sheet-largeCheckbox,
 input[type="radio"].sheet-largeCheckbox
 {
@@ -1333,18 +1350,37 @@ input[type="radio"].sheet-largeCheckbox
 	margin: 0;
 	padding: 0;
 	font-size: 25px;
-	vertical-align: bottom;
+	vertical-align: middle;
 }
 
+/*  Image Location  */
 span.sheet-largePips
 {
 	background-size: 24px 24px;
 	height: 25px;
 	width: 25px;
-	vertical-align: bottom;
+	vertical-align: middle;
 }
 
 /* Graphics */
+input[type="radio"] + span.sheet-capacityPips
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/CapacityPipsFilled.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="radio"]:checked + span.sheet-capacityPips ~ input[type="radio"] + span.sheet-capacityPips
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/CapacityPips.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
 input[type="checkbox"] + span.sheet-hexSelector
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/HexPip.png);
@@ -1362,7 +1398,6 @@ input[type="checkbox"]:checked + span.sheet-hexSelector
 	opacity: 1;
 	z-index: 2;
 }
-
 
 input[type="checkbox"] + span.sheet-armour
 {
@@ -1785,6 +1820,8 @@ input[type="number"].sheet-currentCharge
 	grid-row-start: 1;
 	grid-column-end: 2;
 	grid-row-end: 2;
+	justify-self: center;
+	align-self:center;
 }
 
 .sheet-moduleDetail
@@ -2204,13 +2241,14 @@ input[type="number"].sheet-currentCharge
 	justify-self: start;
 }
 
-.sheet-launchBayCapacityPips
+.sheet-launchBaycapacityPips
 {
 	grid-column-start: 8;
 	grid-column-end: 10;
 	grid-row-start: 7;
 	grid-row-end: 8;
-	text-align: end;
+	align-self: start;
+	justify-self:center;
 }
 
 .sheet-launchBayChargeTitle
