Set up Dice pips and tested on one system

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -818,7 +818,6 @@ div.sheet-doubleColumn
 }
 
 /* Hide actual radio/checkbox for dice tracks*/
-input[type="radio"].sheet-D10,
 input[type="checkbox"].sheet-Overcharge,
 input[type="radio"].sheet-Boost,
 input[type="radio"].sheet-D6,
@@ -998,7 +997,7 @@ input[type="checkbox"]:checked.sheet-patch + span::before
 
 
 /* Fake radio as D10s*/
-input[type="radio"].sheet-D10 + span::before
+/*input[type="radio"].sheet-D10 + span::before
 {
 	margin-right: 4px;
 	line-height: 12px;
@@ -1009,10 +1008,10 @@ input[type="radio"].sheet-D10 + span::before
 	font-size: 16px;
 	font-family: "dicefontd10";
 	content: "J";
-}
+}*/
 
 /* Remove fill from all radios _after_ selected D10 */
-input[type="radio"]:checked.sheet-D10 ~ input[type="radio"].sheet-D10 + span::before
+/*input[type="radio"]:checked.sheet-D10 ~ input[type="radio"].sheet-D10 + span::before
 {
 	margin-right: 4px;
 	line-height: 12px;
@@ -1023,7 +1022,7 @@ input[type="radio"]:checked.sheet-D10 ~ input[type="radio"].sheet-D10 + span::be
 	font-size: 16px;
 	font-family: "dicefontd10";
 	content: "0";
-}
+}*/
 
 /* Fake checkbox as Overcharge*/
 input[type="checkbox"].sheet-Overcharge + span::before
@@ -1083,14 +1082,6 @@ input[type="radio"]:checked.sheet-Boost ~ input[type="radio"].sheet-Boost + span
 	font-size: 16px;
 	font-family: "dicefontd4";
 	content: "0";
-}
-
-/* Alter the 0 die to a different font */
-input[type="radio"].sheet-ZeroDie + span::before
-{
-	font-size: 14px;
-	color: lightgray;
-	content: "|";
 }
 
 /* Description Damage*/
@@ -1302,6 +1293,26 @@ input[type="radio"].sheet-inlineCapacityCheckbox
 	vertical-align: middle;
 }
 
+input[type="radio"].sheet-inlinePipCheckbox
+{
+	width: 10px;
+	height: 12px;
+	margin: 0;
+	padding: 0;
+	vertical-align: middle;
+}
+
+
+input[type="radio"].sheet-inlineCapacityCheckboxSmall
+{
+	width: 8px;
+	height: 12px;
+	margin: 0;
+	padding: 0;
+	vertical-align: middle;
+}
+
+
 /* Inline Image Location */
 span.sheet-inlineArmour
 {
@@ -1331,12 +1342,22 @@ span.sheet-inlineCapacityPips
 	vertical-align: middle;
 }
 
+span.sheet-inlineCapacityPipsSmall
+{
+	display: inline-block;
+	background-size: 8px 12px;
+	height: 12px;
+	width: 8px;
+	margin-left: -8px;
+	vertical-align: middle;
+}
+
 
 span.sheet-inlinePips
 {
 	display: inline-block;
-	background-size: 10px 10px;
-	height: 10px;
+	background-size: 11px 12px;
+	height: 12px;
 	width: 10px;
 	margin-left: -10px;
 }
@@ -1363,6 +1384,35 @@ span.sheet-largePips
 }
 
 /* Graphics */
+input[type="radio"] + span.sheet-ZeroDie
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/D10ZeroPip.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="radio"] + span.sheet-D10
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/D10PipFilled.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="radio"]:checked + span.sheet-D10 ~ input[type="radio"] + span.sheet-D10,
+input[type="radio"]:checked + span.sheet-ZeroDie ~ input[type="radio"] + span.sheet-D10
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/D10Pip.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+
 input[type="radio"] + span.sheet-capacityPips
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/CapacityPipsFilled.png);
@@ -1679,7 +1729,7 @@ input[type="number"].sheet-currentCharge
 	grid-column-end: 5;
 	grid-row-start: 6;
 	grid-row-end: 7;
-	padding-right: 0px;
+	padding-right: 8px;
 }
 
 .sheet-systemListMod2
@@ -1699,7 +1749,7 @@ input[type="number"].sheet-currentCharge
 	grid-column-end: 5;
 	grid-row-start: 7;
 	grid-row-end: 8;
-	padding-right: 0px;
+	padding-right: 8px;
 }
 
 .sheet-systemListMod3
@@ -1719,7 +1769,7 @@ input[type="number"].sheet-currentCharge
 	grid-column-end: 5;
 	grid-row-start: 8;
 	grid-row-end: 9;
-	padding-right: 0px;
+	padding-right: 8px;
 }
 
 .sheet-systemListMod4
@@ -1739,7 +1789,7 @@ input[type="number"].sheet-currentCharge
 	grid-column-end: 5;
 	grid-row-start: 9;
 	grid-row-end: 10;
-	padding-right: 0px;
+	padding-right: 8px;
 }
 
 /* ***************************************** */
@@ -2244,11 +2294,13 @@ input[type="number"].sheet-currentCharge
 .sheet-launchBaycapacityPips
 {
 	grid-column-start: 8;
-	grid-column-end: 10;
+	grid-column-end: 9;
 	grid-row-start: 7;
 	grid-row-end: 8;
 	align-self: start;
-	justify-self:center;
+	justify-self: end;
+	flex-wrap: nowrap;
+	font-size:8px;
 }
 
 .sheet-launchBayChargeTitle
@@ -2266,8 +2318,9 @@ input[type="number"].sheet-currentCharge
 input[type="number"].sheet-tugReactorCharge
 {
 	height: 40px;
-	width: 40px;
+	width: 45px;
 	font-size: 18px;
+	text-align:center;
 }
 
 .sheet-launchBayChargeBox
@@ -2276,8 +2329,8 @@ input[type="number"].sheet-tugReactorCharge
 	grid-column-end: 8;
 	grid-row-start: 8;
 	grid-row-end: 11;
-	padding-left: 6px;
-	padding-top: 6px;
+	padding-left: 8px;
+	padding-top: 8px;
 }
 
 .sheet-launchBayOverchargeSymbol
